# templates

./: Cargo.toml  README.md  cargo-generate.toml  justfile
.github/workflows/: ci.yml
backend/: README.md
backend-generated/: CONTRIBUTING.md  Cargo.toml  README.md  hmt-package.toml  justfile
backend-generated/src/: args.rs  main.rs
backend/template/: Cargo.toml  README.md  cargo-generate.toml  hmt-package.toml  justfile
backend/template/.github/workflows/: pages.yml
detector/: README.md
detector-generated/: CONTRIBUTING.md  Cargo.toml  README.md  hmt-package.toml  justfile
detector-generated/.github/workflows/: ci.yml  release.yml
detector-generated/src/: main.rs
detector-generated/tests/: integration-test.rs
detector/template/: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  cargo-generate.toml  hmt-package.toml  justfile
detector/template/.github/workflows/: release.yml
detector/template/src/: main.rs
detector/template/tests/: integration-test.rs
frontend/: README.md
frontend-generated/: CONTRIBUTING.md  Cargo.toml  README.md  hmt-package.toml
frontend-generated/.github/workflows/: pages.yml  release.yml
frontend-generated/src/: ast.rs  grammar.lalrpop  lexer.rs  main.rs  parser.rs  token.rs
frontend/template/: Cargo.toml  README.md  build.rs  cargo-generate.toml  hmt-package.toml  justfile
frontend/template/.github/workflows/: ci.yml
frontend/template/src/: args.rs  codegen.rs  emit.rs  error.rs  lib.rs  main.rs
